Remove unused classes.